<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            layout="@layout/pab_title_bar_view"></include>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/sp_screen_height_10"
            android:layout_marginRight="@dimen/sp_screen_height_10"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_margin="@dimen/sp_screen_height_10"/>

            <TextView
                style="@style/screen_text_2_clr_maroon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/sp_screen_height_10"
                android:text="@string/emp_details" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_margin="@dimen/sp_screen_height_10"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/screen_text_2_clr_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/sp_screen_height_10"
                    android:text="@string/comp_employed" />

                <TextView
                    style="@style/screen_text_2_clr_maroon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/man_fields" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_com_employed"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sp_screen_height_42"
                android:background="@drawable/textfield"
                android:padding="@dimen/sp_screen_height_10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/screen_text_2_clr_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/sp_screen_height_10"
                    android:text="@string/designation" />

                <TextView
                    style="@style/screen_text_2_clr_maroon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/man_fields" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_designation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sp_screen_height_42"
                android:background="@drawable/textfield"
                android:padding="@dimen/sp_screen_height_10" />

            <TextView
                style="@style/screen_text_2_clr_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/sp_screen_height_10"
                android:text="@string/work_experience" />

            <EditText
                android:id="@+id/et_work_exp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sp_screen_height_42"
                android:background="@drawable/textfield"
                android:padding="@dimen/sp_screen_height_10"
                android:inputType="number"/>

            <TextView
                style="@style/screen_text_2_clr_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/sp_screen_height_10"
                android:text="@string/con_in_emp" />

            <RadioGroup
                android:id="@+id/rg_con_emp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/yes" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/no" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_next_sal"
                style="@style/screen_text_2_clr_white"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sp_screen_height_50"
                android:layout_marginBottom="@dimen/sp_screen_height_10"
                android:layout_marginTop="@dimen/sp_screen_height_10"
                android:background="@drawable/button"
                android:text="NEXT" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>