<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.panasiabanklc.activities.PABLoanCalculatorActivity">

    <LinearLayout
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_marginTop="13dp">
        <include layout="@layout/pab_screen_header_view"></include>
        <include layout="@layout/pab_title_bar_view"></include>
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
            android:layout_above="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="left"
                android:padding="@dimen/sp_screen_height_10"
                style="@style/screen_text_2_clr_black"
                android:text="@string/basic_sal"
                android:layout_margin="@dimen/sp_screen_height_10"></TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="@dimen/sp_screen_height_10">

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    style="@style/screen_text_2_clr_black"
                    android:background="@drawable/textfield_round"
                    android:text="RS."></Button>
                <EditText
                    android:id="@+id/et_basicsalary"
                    android:padding="@dimen/sp_screen_height_10"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:background="@drawable/textfield"
                    style="@style/screen_text_2_clr_black"
                    android:hint="15000"
                    android:inputType="number"/>
                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    style="@style/screen_text_2_clr_black"
                    android:background="@drawable/textfield_round_right"></Button>
                    />
            </LinearLayout>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="left"
                android:padding="@dimen/sp_screen_height_10"
                style="@style/screen_text_2_clr_black"
                android:text="@string/loan_amount"
                android:layout_margin="@dimen/sp_screen_height_10"></TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="@dimen/sp_screen_height_10">
                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    style="@style/screen_text_2_clr_black"
                    android:background="@drawable/textfield_round"
                    android:text="RS."></Button>
                <EditText
                    android:id="@+id/et_loanamount"
                    android:padding="@dimen/sp_screen_height_10"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:background="@drawable/textfield"
                    style="@style/screen_text_2_clr_black"
                    android:hint="15000"
                    android:inputType="number"/>
                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    style="@style/screen_text_2_clr_black"
                    android:background="@drawable/textfield_round_right"></Button>
                </LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="left"
                android:padding="@dimen/sp_screen_height_10"
                style="@style/screen_text_2_clr_black"
                android:text="@string/interest_rate"
                android:layout_marginLeft="@dimen/sp_screen_height_10"></TextView>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_interestrate"
                    style="@style/screen_text_2_clr_maroon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/sp_screen_height_20"
                    android:gravity="left"
                    android:hint="@string/interest"
                    android:inputType="numberDecimal"></EditText>`
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="left"
                    android:padding="@dimen/sp_screen_height_10"
                    style="@style/screen_text_2_clr_black"
                    android:text="@string/loan_period"
                    android:layout_marginLeft="@dimen/sp_screen_height_10"></TextView>
                <TextView
                    android:id="@+id/tv_loan_preriod"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="@dimen/sp_screen_height_10"
                    android:gravity="right"
                    style="@style/screen_text_2_clr_black"
                    android:text="@string/loan_period"></TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <SeekBar
                    android:id="@+id/simpleSeekBar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:max="5"
                    android:progress="2"
                    android:progressDrawable="@drawable/seekbar_progressbar"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="left"
                    android:padding="@dimen/sp_screen_height_10"
                    style="@style/screen_text_2_clr_black"
                    android:text="@string/monthly_payment"
                    android:layout_marginLeft="@dimen/sp_screen_height_10"></TextView>
                <TextView
                    android:id="@+id/tv_monthlyinstalment"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="left"
                    android:padding="@dimen/sp_screen_height_10"
                    style="@style/screen_text_2_clr_black"
                    android:text="@string/monthly_payment"
                    android:layout_marginLeft="@dimen/sp_screen_height_10"></TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <SeekBar
                    android:id="@+id/sb_monthlypayment"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:max="200"
                    android:progress="50"
                    android:progressDrawable="@drawable/seekbar_progressbar"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/btn_email_result"
                    android:layout_height="@dimen/sp_screen_height_50"
                    android:layout_width="match_parent"
                    android:background="@drawable/button"
                    android:layout_margin="@dimen/sp_screen_height_10"
                    android:layout_marginTop="@dimen/sp_screen_height_20"
                    style="@style/screen_text_2_clr_white"
                    android:text="@string/email_results"></Button>
            </LinearLayout>
        </LinearLayout>
        </ScrollView>
    </LinearLayout>
    </RelativeLayout>


